--- a/index.html
+++ b/index.html
@@ -9,9 +9,33 @@
 
 </head>
 <body>
-  <div class="header">
+  <header>
+ <div class="header">
     <div class="logo">Logo</div>
     <a href="#" class="signup-btn">Sign Up</a>
   </div>
+  <div class="main">
+    <h1>Cool Dark UI Template 
+      for<br>Webflow Agencies!
+    </h1>
+    <a href="#" class="focus-btn">Stay Focus</a>
+  </div>
+  </header>
+
+  <main>
+    <section class="preview-section">
+      <div class="text-content">
+        <h2>See It in Action</h2>
+        <p>Explore the live preview and imagine 
+          your bran in this bold newe lokk.
+        </p>
+        <a href="#" class="preview-btn">Lunch Live preview</a>
+      </div>
+      <div class="image">
+        <img src="assest/wc-mini.png" alt="Webflow preview">
+      </div>
+    </section>
+  </main>
+ 
 </body>
 </html>
