--- a/index.html
+++ b/index.html
@@ -113,6 +113,17 @@
                 </div>
             </div>
         </div>
+
+                <div class="ready">
+            <h2 class="headline">Ready to focus better</h2>
+            <p class="sub-headline">This template instantly leveled up our presence." – Studio Vertex</p>
+            <div class="button-container">
+                <a href="#" class="started-button">Get Started Free</a>
+            </div>
+            <div class="image-ready">
+                <img src="assest/wc-big.png" alt="Webflow Conf 2022" class="video-frame">
+                </div>
+        </div>
     </section>
   </main>
  
