--- a/index.html
+++ b/index.html
@@ -124,6 +124,44 @@
                 <img src="assest/wc-big.png" alt="Webflow Conf 2022" class="video-frame">
                 </div>
         </div>
+
+         <div class="touch-container">
+            <div class="left">
+                <h1>Let's Get in Touch</h1>
+            </div>
+            <div class="right">
+                <div class="form">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" placeholder="example@email.com">
+                </div>
+                <div class="form">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" placeholder="full name">
+                </div>
+                <div class="form">
+                    <label for="message">Message</label>
+                    <textarea id="message" placeholder="write your message...."></textarea>
+                </div>
+                <button type="submit">Get In Touch</button>
+            </div>
+        </div>
+
+
+
+
+        <div class="logo-container">
+          <div class="logo">LOGO</div>
+          <p class="description"> Ready ti elevate your online presebce? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
+          <nav class="navigation">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">How it works</a>
+            <a href="#">Services</a>
+          </nav>
+        </div>
+
+
+
     </section>
   </main>
  
