--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <header>
+    <div class="herro">
  <div class="header">
     <div class="logo">Logo</div>
     <a href="#" class="signup-btn">Sign Up</a>
@@ -20,6 +21,8 @@
     </h1>
     <a href="#" class="focus-btn">Stay Focus</a>
   </div>
+    </div>
+
   </header>
 
   <main>
